[tool.poetry]
name = "coffeerun-backend"
version = "0.1.0"
description = ""
authors = ["cndoit18 <cndoit18@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.18.2"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
